# icg17

./: .gitignore  CMakeLists.txt  README.md
common/: icg_helper.h
homework1/icg17/: CMakeLists.txt
homework2/: README.md
homework2/hw2_trackball/: main.cpp  trackball.h
homework3/: CMakeLists.txt  README.md
homework4/: CMakeLists.txt  README.md
homework4/hw4p1_fastsmooth/: framebuffer.h  main.cpp
homework4/hw4p3_motionblur/: main.cpp
homework4/hw4p4_bonus_refract/: framebuffer.h  main.cpp
homework4/hw5p1_fastsmooth/: main.cpp
project/: CMakeLists.txt
report/: icgscratch.org  report01.tex  report02.aux  report02.fdb_latexmk  report02.fls  report02.tex  report_final.tex
terrain/: Bezier.h  CMakeLists.txt  Camera.cpp  CameraFreefly.h  FrameBuffer.h  GBuffer.h  Light.cpp  Light.h  Material.cpp  ScalarFrameBuffer.cpp  ScalarFrameBuffer.h  ShaderBuilder.cpp  ShaderBuilder.h  TexGenerator.cpp  World.cpp  World.h  main.cpp
terrain/Grid/: Grid.cpp  clipspace.glsl  foccluder.glsl  grass_foccluder.glsl  grass_fshader_plants.glsl  grass_gshader.glsl  normal.glsl  sdoor.glsl  terrain_fshader.glsl  water_fshader.glsl  water_vshader.glsl
terrain/Particles/: Particle.cpp  Particle.h  Particle_generator.cpp
terrain/ScreenQuad/: NoiseGen_fshader.glsl  flightpass.glsl  light_scattering.glsl  vlightpass.glsl
terrain/Skybox/: Skybox.cpp  atmosphere.glsl  clearsky.xcf  skybox_lightsca.glsl
terrain/Tree/: PhotoMaton.cpp  PhotoMaton.h  Tree.cpp  Tree.h  TreePlanes.h  f_leaves.glsl  f_planes.glsl  f_tree.glsl  g_leaves.glsl  g_planes.glsl  v_planes.glsl
(+145 files in other folders)
